# hermes-windows

./: .copilot-rules.md  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ReactNative.Hermes.Windows.targets  Win-Versions.md  azure-pipelines.yml  cibuild.ps1  guardian_baselines.gdnbaselines  hermes-engine.podspec  merged-hermes-revision.txt
.ado/: Microsoft.JavaScript.Hermes.targets  ReactNative.Hermes.Windows.Fat.nuspec  ReactNative.Hermes.Windows.UAP.targets  ReactNative.Hermes.Windows.nuspec  ReactNative.Hermes.Windows.targets  apple-pipeline.yml  azure-pipelines.yml  build-and-test.yml  build-template.yml  build.yml  jobs.yml  publish.yml  release-pipeline.yml  update-hermes.yml
.ado/scripts/: .gitignore  .prettierignore  .prettierrc  README.md  build-apple.mts  build.js  cibuild.ps1  eslint.config.js  fake-nuget.exe.cmd  package-lock.json  package.json  prepare_boost.ps1  prepare_reactnative.ps1  setVersionNumber.js
.config/1espt/: PipelineAutobaseliningConfig.yml
.config/guardian/: .gdnbaselines
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: benchmark.yml  build.yml  codeql-analysis.yml
API/: CMakeLists.txt
API/hermes/: CMakeLists.txt  TracingRuntime.cpp  TracingRuntime.h  (+4 more)
API/hermes_node_api/: CMakeLists.txt  hermes_node_api.cpp  hermes_node_api.h
API/hermes_node_api/node_api/: CMakeLists.txt
android/: gradlew.bat
doc/: HermesWindowsFork.md  IntlAPIs.md  WindowsBuild.md
npm/: package.json
unittests/: CMakeLists.txt
utils/: build-apple-framework.sh  build-ios-framework.sh
website/: package.json
(+104 files in other folders)
